--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,10 @@ html{
     width: 100%;
     height: 100%;
     position: absolute;
-
+}
+div{   
+    position: relative;
+    border: 1%;
 }
 .lateral{
     height: 100%;
@@ -66,7 +69,9 @@ nav a:hover{
     color: rgb(0, 0, 0);
 }
 a{
-    font-size: 25px;
+    font-weight: 600;
+    /* font-size: 100%; */
+    font-size: auto;
     font-family: sans-serif;
 }
 span{
